cabal-version:       3.0
name:                empathy
version:             0.1.0.0
synopsis:            typed paths, with feeling
description:         empathy provides data types for filesystem path manipulation.
homepage:            https://github.com/patrickt/empathy
bug-reports:         https://github.com/patrickt/empathy/issues
license:             MIT
author:              Patrick Thomson
maintainer:          patrick.william.thomson@gmail.com
copyright:           2019 Patrick Thomson
category:            System
build-type:          Simple
extra-doc-files:     README.md
                   , CHANGELOG.md
tested-with:         GHC == 8.6.4
                   , GHC == 8.8.1

source-repository head
  type:                git
  location:            https://github.com/patrickt/empathy.git

common shared
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields

  build-depends:       base >= 4.12 && < 4.15
                     , aeson ^>= 1.4.6
                     , bytestring
                     , hashable
                     , deepseq ^>= 1.4.4
                     , megaparsec ^>= 7.0.5
                     , symbols ^>= 0.3
                     , text
                     , word8

library empathy-core
  import:              shared
  hs-source-dirs:      core
  exposed-modules:     Data.Path.Types
                     , Data.PathBuf
                     , Data.Path
                     , Data.Path.Internal.Component
                     , Data.Path.Internal.Last
                     , Data.Path.Internal.PathBuf
                     , Data.Path.Internal.Raw
  build-depends:       hashable > 1 && < 2

-- library empathy-sig
--   import:              shared
--   hs-source-dirs:      sig
--   exposed-modules:     Data.Path.Generic
--   signatures:          Data.Path.System
--   build-depends:       empathy-core

-- library empathy-posix
--   import:              shared
--   hs-source-dirs:      posix
--   exposed-modules:     Data.Path.System.Posix
--   build-depends:       empathy-core

-- library empathy-win32
--   import:              shared
--   hs-source-dirs:      windows
--   exposed-modules:     Data.Path.System.Windows
--   build-depends:       empathy-core

-- library
--   import:              shared
--   build-depends:       empathy-sig
--   reexported-modules:  Data.Path
--   if os(windows)
--     build-depends:     empathy-win32
--     mixins:            empathy-sig (Data.Path.Generic as Data.Path) requires (Data.Path.System as Data.Path.System.Windows)
--   else
--     build-depends:     empathy-posix
--     mixins:            empathy-sig (Data.Path.Generic as Data.Path) requires (Data.Path.System as Data.Path.System.Posix)

test-suite empathy-test
  import:              shared
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Gen
  build-depends:       base
                     , empathy-core
                     , hedgehog == 1.*
                     , megaparsec
                     , bytestring
